tests/error/tracing_errors/comptime_flags_nested_control_dagger.err
Error: Dagger constraint violation (at $FILE:16:12)
   | 
14 |     with control(ctrl):
15 |         with dagger:
16 |             foo(q)
   |             ^^^^^^ This function cannot be called in a daggerable context

Help: Consider adding the flag `(daggerable=True)` to the decorator of the
function `foo`

Guppy compilation failed due to 1 previous error
